--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My AR Model</title>
+
+  <!-- Model Viewer library -->
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
+
   <style>
     body {
       margin: 0;
@@ -13,6 +16,7 @@
       align-items: center;
       height: 100vh;
       background: #f9f9f9;
+      font-family: Arial, sans-serif;
     }
     model-viewer {
       width: 100%;
@@ -20,21 +24,26 @@
       max-width: 600px;
       max-height: 600px;
       background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
   </style>
 </head>
 <body>
 
-  <!-- Add poster + preload for faster user experience -->
-  <model-viewer 
+  <!-- Better version with poster, eager loading and reveal -->
+  <model-viewer
       src="firsnfirsh.glb"
       ar
       ar-modes="scene-viewer quick-look webxr"
       camera-controls
       auto-rotate
-      poster="thumbnail.jpg"   <!-- 👈 small preview image -->
-      loading="eager"          <!-- 👈 load immediately -->
-      reveal="auto">           <!-- 👈 auto-show after ready -->
+      autoplay
+      loading="eager"
+      reveal="auto"
+      poster="thumbnail.jpg"  <!-- 👈 add a preview image -->
+      shadow-intensity="1"
+      exposure="1">
   </model-viewer>
 
 </body>
