--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My AR Model</title>
+  <title>AR Model Viewer</title>
 
-  <!-- Model Viewer library -->
+  <!-- Load model-viewer -->
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
 
   <style>
@@ -15,25 +15,27 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: #f9f9f9;
+      background: #f4f6f9;
       font-family: Arial, sans-serif;
     }
+
     model-viewer {
       width: 100%;
       height: 100%;
       max-width: 600px;
       max-height: 600px;
       background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      border-radius: 14px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.15);
     }
   </style>
 </head>
 <body>
 
-  <!-- Better version with poster, eager loading and reveal -->
+  <!-- Optimized AR Model -->
   <model-viewer
-      src="firsnfirsh.glb"
+      src="firsnfirsh.glb"   <!-- 👈 Replace with your model -->
+      alt="3D Model"
       ar
       ar-modes="scene-viewer quick-look webxr"
       camera-controls
@@ -41,7 +43,7 @@
       autoplay
       loading="eager"
       reveal="auto"
-      poster="thumbnail.jpg"  <!-- 👈 add a preview image -->
+      poster="thumbnail.jpg"  <!-- 👈 Add a preview image -->
       shadow-intensity="1"
       exposure="1">
   </model-viewer>
