--- a/index.html
+++ b/index.html
@@ -1,52 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AR Model Viewer</title>
-
-  <!-- Load model-viewer -->
-  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
-
-  <style>
-    body {
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: #f4f6f9;
-      font-family: Arial, sans-serif;
-    }
-
-    model-viewer {
-      width: 100%;
-      height: 100%;
-      max-width: 600px;
-      max-height: 600px;
-      background: #fff;
-      border-radius: 14px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.15);
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Optimized AR Model -->
-  <model-viewer
-      src="firsnfirsh.glb"   <!-- 👈 Replace with your model -->
-      alt="3D Model"
-      ar
-      ar-modes="scene-viewer quick-look webxr"
-      camera-controls
-      auto-rotate
-      autoplay
-      loading="eager"
-      reveal="auto"
-      poster="thumbnail.jpg"  <!-- 👈 Add a preview image -->
-      shadow-intensity="1"
-      exposure="1">
-  </model-viewer>
-
-</body>
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <title>My AR Model</title> <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script> <style> body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background: #f9f9f9; } model-viewer { width: 100%; height: 100%; max-width: 600px; max-height: 600px; } </style> </head> <body> <!-- Yahaan tumhari model file ka naam lagana hai --> <model-viewer src="firsnfirsh.glb" ar ar-modes="scene-viewer quick-look webxr" camera-controls auto-rotate> </model-viewer> </body> </html>
