--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <title>My AR Model</title> <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script> <style> body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background: #f9f9f9; } model-viewer { width: 100%; height: 100%; max-width: 600px; max-height: 600px; } </style> </head> <body> <!-- Yahaan tumhari model file ka naam lagana hai --> <model-viewer src="firsnfirsh.glb" ar ar-modes="scene-viewer quick-look webxr" camera-controls auto-rotate> </model-viewer> </body> </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My AR Model</title>
+  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
+  <style>
+    body {
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: #f9f9f9;
+      flex-direction: column;
+    }
+    model-viewer {
+      width: 100%;
+      height: 100%;
+      max-width: 600px;
+      max-height: 600px;
+    }
+    button {
+      margin-top: 15px;
+      padding: 12px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      background: #007bff;
+      color: white;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #0056b3;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- 3D Model -->
+  <model-viewer id="arModel" 
+    src="firsnfirsh.glb" 
+    ar 
+    ar-modes="scene-viewer quick-look webxr" 
+    camera-controls 
+    auto-rotate>
+  </model-viewer>
+
+  <!-- Button to open AR directly -->
+  <button id="openAR">📱 View in AR</button>
+
+  <script>
+    document.getElementById('openAR').addEventListener('click', () => {
+      document.getElementById('arModel').activateAR(); // Forces AR mode
+    });
+  </script>
+
+</body>
+</html>
