--- a/index.html
+++ b/index.html
@@ -1,60 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My AR Model</title>
-  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Direct AR Launch</title>
   <style>
     body {
-      margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       background: #f9f9f9;
-      flex-direction: column;
     }
-    model-viewer {
-      width: 100%;
-      height: 100%;
-      max-width: 600px;
-      max-height: 600px;
-    }
-    button {
-      margin-top: 15px;
-      padding: 12px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      background: #007bff;
+    a {
+      padding: 15px 25px;
+      font-size: 18px;
+      background: #0078ff;
       color: white;
-      cursor: pointer;
+      text-decoration: none;
+      border-radius: 10px;
     }
-    button:hover {
-      background: #0056b3;
+    a:hover {
+      background: #005fcc;
     }
   </style>
 </head>
 <body>
 
-  <!-- 3D Model -->
-  <model-viewer id="arModel" 
-    src="firsnfirsh.glb" 
-    ar 
-    ar-modes="scene-viewer quick-look webxr" 
-    camera-controls 
-    auto-rotate>
-  </model-viewer>
+  <!-- Android direct AR (Scene Viewer) -->
+  <a href="https://arvr.google.com/scene-viewer/1.0?file=https://yourdomain.com/firsnfirsh.glb&mode=ar_only" 
+     rel="ar">
+     View in AR (Android)
+  </a>
 
-  <!-- Button to open AR directly -->
-  <button id="openAR">📱 View in AR</button>
-
-  <script>
-    document.getElementById('openAR').addEventListener('click', () => {
-      document.getElementById('arModel').activateAR(); // Forces AR mode
-    });
-  </script>
+  <!-- iOS direct AR (Quick Look) -->
+  <a href="https://yourdomain.com/firsnfirsh.usdz" rel="ar">
+     View in AR (iPhone)
+  </a>
 
 </body>
 </html>
