--- a/index.html
+++ b/index.html
@@ -1,42 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Direct AR Launch</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My AR Model</title>
+  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
   <style>
     body {
+      margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       background: #f9f9f9;
     }
-    a {
-      padding: 15px 25px;
-      font-size: 18px;
-      background: #0078ff;
-      color: white;
-      text-decoration: none;
-      border-radius: 10px;
-    }
-    a:hover {
-      background: #005fcc;
+    model-viewer {
+      width: 100%;
+      height: 100%;
+      max-width: 600px;
+      max-height: 600px;
     }
   </style>
 </head>
 <body>
 
-  <!-- Android direct AR (Scene Viewer) -->
-  <a href="https://arvr.google.com/scene-viewer/1.0?file=https://yourdomain.com/firsnfirsh.glb&mode=ar_only" 
-     rel="ar">
-     View in AR (Android)
-  </a>
-
-  <!-- iOS direct AR (Quick Look) -->
-  <a href="https://yourdomain.com/firsnfirsh.usdz" rel="ar">
-     View in AR (iPhone)
-  </a>
+  <!-- Yahaan tumhari model file ka naam lagana hai -->
+  <model-viewer src="firsnfirsh.glb"
+                ar
+                ar-modes="scene-viewer quick-look webxr"
+                camera-controls
+                auto-rotate>
+  </model-viewer>
 
 </body>
 </html>
