--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
   </style>
 </head>
 <body>
-
-  <!-- Yahaan tumhari model file ka naam lagana hai -->
+  <!-- Yaha apna model ka naam dalna hai -->
   <model-viewer src="firsnfirsh.glb"
+                ios-src="firsnfirsh.usdz"
                 ar
                 ar-modes="scene-viewer quick-look webxr"
                 camera-controls
                 auto-rotate>
   </model-viewer>
-
 </body>
 </html>
