--- a/index.html
+++ b/index.html
@@ -1,42 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My AR Model</title>
-  <!-- Model Viewer Library -->
-  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
       margin: 0;
+      padding: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: #f9f9f9;
+      background: #f0f0f0;
     }
     model-viewer {
       width: 100%;
       height: 100%;
-      max-width: 600px;
-      max-height: 600px;
-      background: #eee;
-      border-radius: 10px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     }
   </style>
 </head>
 <body>
 
-  <model-viewer src="firsnfirsh.glb"
-                ios-src="firsnfirsh.usdz"
-                ar
-                ar-modes="scene-viewer quick-look webxr"
-                camera-controls
-                auto-rotate
-                loading="lazy"
-                poster="thumbnail.jpg"
-                alt="My AR 3D Model">
+  <model-viewer 
+      src="firsnfirsh.glb"
+      ios-src="firsnfirsh.usdz"
+      ar
+      ar-modes="scene-viewer quick-look webxr"
+      camera-controls
+      loading="lazy"
+      alt="My AR 3D Model">
   </model-viewer>
 
 </body>
