--- a/index.html
+++ b/index.html
@@ -1,40 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>My AR Model</title>
+
+  <!-- Model Viewer -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
   <style>
+    * { box-sizing: border-box; }
     body {
       margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       height: 100vh;
-      background: #f0f0f0;
+      display: grid;
+      place-items: center;
+      background: #f4f4f4;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
     model-viewer {
-      width: 100%;
-      height: 100%;
+      width: min(92vw, 720px);
+      height: min(80vh, 560px);
+      background: #eee;
+      border-radius: 14px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.12);
+    }
+    /* Custom AR button style */
+    .ar-btn {
+      position: absolute;
+      left: 50%;
+      bottom: 16px;
+      transform: translateX(-50%);
+      padding: 10px 18px;
+      border: 0;
+      border-radius: 10px;
+      background: #111;
+      color: #fff;
+      font-weight: 600;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
 
-  <model-viewer 
+  <model-viewer
       src="firsnfirsh.glb"
       ios-src="firsnfirsh.usdz"
+      alt="My AR 3D Model"
       ar
       ar-modes="scene-viewer quick-look webxr"
       camera-controls
-      alt="My AR 3D Model">
-      
-      <!-- AR button force karne ke liye custom button -->
-      <button slot="ar-button" style="background: black; color: white; padding: 10px 20px; border-radius: 8px; position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%);">
-        👓 View in AR
-      </button>
+      loading="lazy"
+      poster="thumbnail.jpg"
+      disable-zoom="false"
+      touch-action="pan-y">
+
+    <!-- Hamesha visible AR button -->
+    <button slot="ar-button" class="ar-btn">👓 View in AR</button>
 
   </model-viewer>
 
