--- a/index.html
+++ b/index.html
@@ -2,63 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My AR Model</title>
-
-  <!-- Model Viewer -->
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-
+  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
   <style>
-    * { box-sizing: border-box; }
     body {
       margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       height: 100vh;
-      display: grid;
-      place-items: center;
-      background: #f4f4f4;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      background: #f9f9f9;
     }
     model-viewer {
-      width: min(92vw, 720px);
-      height: min(80vh, 560px);
-      background: #eee;
-      border-radius: 14px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.12);
-    }
-    /* Custom AR button style */
-    .ar-btn {
-      position: absolute;
-      left: 50%;
-      bottom: 16px;
-      transform: translateX(-50%);
-      padding: 10px 18px;
-      border: 0;
-      border-radius: 10px;
-      background: #111;
-      color: #fff;
-      font-weight: 600;
-      cursor: pointer;
+      width: 100%;
+      height: 100%;
+      max-width: 600px;
+      max-height: 600px;
     }
   </style>
 </head>
 <body>
-
-  <model-viewer
-      src="firsnfirsh.glb"
-      ios-src="firsnfirsh.usdz"
-      alt="My AR 3D Model"
-      ar
-      ar-modes="scene-viewer quick-look webxr"
-      camera-controls
-      loading="lazy"
-      poster="thumbnail.jpg"
-      disable-zoom="false"
-      touch-action="pan-y">
-
-    <!-- Hamesha visible AR button -->
-    <button slot="ar-button" class="ar-btn">👓 View in AR</button>
-
+  <!-- Yaha apna model ka naam dalna hai -->
+  <model-viewer src="firsnfirsh.glb"
+                ios-src="firsnfirsh.usdz"
+                ar
+                ar-modes="scene-viewer quick-look webxr"
+                camera-controls
+                auto-rotate>
   </model-viewer>
-
 </body>
 </html>
