--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
   <noscript>
     JavaScript required. Open AR manually:
     <div class="row" style="margin-top:8px">
-      <a class="btn" rel="ar" href="https://udfbhvhgb65151.github.io/AR-MODEL/firsnfirsh.usdz">Open on iPhone (USDZ)</a>
-      <a class="btn" href="intent://arvr.google.com/scene-viewer/1.0?file=https://udfbhvhgb65151.github.io/AR-MODEL/firsnfirsh.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;">Open on Android (Scene Viewer)</a>
+      <a class="btn" rel="ar" href="https://udfbhvhgb65151.github.io/firsnfirsh-model/firsnfirsh.usdz">Open on iPhone (USDZ)</a>
+      <a class="btn" href="intent://arvr.google.com/scene-viewer/1.0?file=https://udfbhvhgb65151.github.io/firsnfirsh-model/firsnfirsh.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;">Open on Android (Scene Viewer)</a>
     </div>
   </noscript>
 
   <div id="fallback" class="hidden">
     <p>Agar auto-open block ho gaya ho, niche button dabao:</p>
     <div class="row">
-      <a class="btn" id="btn-ios"  rel="ar" href="https://udfbhvhgb65151.github.io/AR-MODEL/firsnfirsh.usdz">Open on iPhone</a>
-      <a class="btn" id="btn-and" href="intent://arvr.google.com/scene-viewer/1.0?file=https://udfbhvhgb65151.github.io/AR-MODEL/firsnfirsh.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;">Open on Android</a>
+      <a class="btn" id="btn-ios"  rel="ar" href="https://udfbhvhgb65151.github.io/firsnfirsh-model/firsnfirsh.usdz">Open on iPhone</a>
+      <a class="btn" id="btn-and" href="intent://arvr.google.com/scene-viewer/1.0?file=https://udfbhvhgb65151.github.io/firsnfirsh-model/firsnfirsh.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;">Open on Android</a>
     </div>
   </div>
 
   <script>
     (function () {
-      const glb  = "https://udfbhvhgb65151.github.io/AR-MODEL/firsnfirsh.glb";
-      const usdz = "https://udfbhvhgb65151.github.io/AR-MODEL/firsnfirsh.usdz";
+      const glb  = "https://udfbhvhgb65151.github.io/firsnfirsh-model/firsnfirsh.glb";
+      const usdz = "https://udfbhvhgb65151.github.io/firsnfirsh-model/firsnfirsh.usdz";
 
       const ua = navigator.userAgent.toLowerCase();
       const isiOS = /iphone|ipad|ipod/.test(ua);
