--- a/index.html
+++ b/index.html
@@ -1,36 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My AR Model</title>
-  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>AR Redirect</title>
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <style>
-    body {
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: #f9f9f9;
-    }
-    model-viewer {
-      width: 100%;
-      height: 100%;
-      max-width: 600px;
-      max-height: 600px;
-    }
+    body { font-family: system-ui, Arial, sans-serif; margin: 0; padding: 24px; }
+    .hidden { display:none; }
+    .btn { padding:12px 16px; border:1px solid #ccc; border-radius:8px; cursor:pointer; }
+    .row { display:flex; gap:12px; align-items:center; flex-wrap:wrap; }
   </style>
 </head>
 <body>
+  <noscript>
+    JavaScript required. Open AR manually:
+    <div class="row" style="margin-top:8px">
+      <a class="btn" rel="ar" href="https://udfbhvhgb65151.github.io/AR-MODEL/firsnfirsh.usdz">Open on iPhone (USDZ)</a>
+      <a class="btn" href="intent://arvr.google.com/scene-viewer/1.0?file=https://udfbhvhgb65151.github.io/AR-MODEL/firsnfirsh.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;">Open on Android (Scene Viewer)</a>
+    </div>
+  </noscript>
 
-  <!-- Yahaan tumhari model file ka naam lagana hai -->
-  <model-viewer src="firsnfirsh.glb"
-                ar
-                ar-modes="scene-viewer quick-look webxr"
-                camera-controls
-                auto-rotate>
-  </model-viewer>
+  <div id="fallback" class="hidden">
+    <p>Agar auto-open block ho gaya ho, niche button dabao:</p>
+    <div class="row">
+      <a class="btn" id="btn-ios"  rel="ar" href="https://udfbhvhgb65151.github.io/AR-MODEL/firsnfirsh.usdz">Open on iPhone</a>
+      <a class="btn" id="btn-and" href="intent://arvr.google.com/scene-viewer/1.0?file=https://udfbhvhgb65151.github.io/AR-MODEL/firsnfirsh.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;">Open on Android</a>
+    </div>
+  </div>
 
+  <script>
+    (function () {
+      const glb  = "https://udfbhvhgb65151.github.io/AR-MODEL/firsnfirsh.glb";
+      const usdz = "https://udfbhvhgb65151.github.io/AR-MODEL/firsnfirsh.usdz";
+
+      const ua = navigator.userAgent.toLowerCase();
+      const isiOS = /iphone|ipad|ipod/.test(ua);
+      const isAndroid = /android/.test(ua);
+
+      try {
+        if (isiOS) {
+          // iPhone/iPad → Apple Quick Look (USDZ)
+          location.replace(usdz);
+          return;
+        }
+        if (isAndroid) {
+          // Android → Google Scene Viewer (AR)
+          const intent = "intent://arvr.google.com/scene-viewer/1.0?file=" +
+                         encodeURIComponent(glb) +
+                         "&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;";
+          location.replace(intent);
+          return;
+        }
+      } catch(e) {}
+
+      // Desktop/unsupported → show manual buttons
+      document.getElementById("fallback").classList.remove("hidden");
+    })();
+  </script>
 </body>
 </html>
